objects/Invoice_item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>sf42_Invoice__c</referenceTo>
        <relationshipName>Invoice_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Price per one item.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>How many items?</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <inlineHelpText>Enter additional information about this item.</inlineHelpText>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product_Name_List__c</fullName>
        <label>Service/Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment rental</fullName>
                </value>
                <value>
                    <fullName>Service working time (hours)</fullName>
                </value>
                <value>
                    <fullName>Service working time (days)</fullName>
                </value>
                <value>
                    <fullName>Analysis/Report time (hours)</fullName>
                </value>
                <value>
                    <fullName>Service overtime (hours)</fullName>
                </value>
                <value>
                    <fullName>Flight ticket</fullName>
                </value>
                <value>
                    <fullName>Car rental</fullName>
                </value>
                <value>
                    <fullName>Other travelling expenses</fullName>
                </value>
                <value>
                    <fullName>Travelling (km)</fullName>
                </value>
                <value>
                    <fullName>Travelling time (hours)</fullName>
                </value>
                <value>
                    <fullName>Overtime travelling (hours)</fullName>
                </value>
                <value>
                    <fullName>Other expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Item_Total_Amount__c</fullName>
        <formula>Quantity__c *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price multiplied by quantity.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PT - Invoice Item</label>
    <nameField>
        <displayFormat>Invoice Item-{0}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>